hide overflow to avoid scrollbars

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -33,8 +33,14 @@ body {
 }
 
 #screen {
-  width: 1014px;
-  height: 760px;
+  width: 1024px;
+  height: 768px;
+}
+
+#container {
+  width: 1024px;
+  height: 768px;
+  overflow: hidden;
 }
 
 #toolbar form {
